--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.1.0",
     "@mui/material-nextjs": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
+    "axios": "^1.9.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
